# traxe

./: CHAINS.md  CLAUDE.md  Cargo.toml  README.md
reference/alchemy/: node-supported-chains.md
reference/blockscout/: llms.txt
reference/blockscout/devs/: pro-api.md
reference/blockscout/devs/apis/: rest.md  rpc.md
reference/dune/: llms.txt
reference/etherscan/: changelog.md  getting-started.md  introduction.md  llms.txt  solscan-openapi.json  supported-chains.md  v2-migration.md  what-are-skills.md
reference/etherscan/contract-verification/: common-verification-errors.md  verify-with-foundry.md  verify-with-hardhat.md  verify-with-remix.md
reference/etherscan/mcp-docs/: introduction.md
reference/etherscan/metadata/: introduction.md  other-attributes-reference.md  reputation-reference.md
reference/etherscan/resources/: best-practices.md  common-error-messages.md  contact-us.md  pro-endpoints.md  rate-limits.md
reference/sourcify/: 4byte_swagger.json  swagger.json
src/: chainlist.rs  chains.rs  cli.rs  ir.rs  lib.rs  main.rs  provider.rs  types.rs
src/abi/: blockscout.rs  etherscan.rs  fourbyte.rs  mod.rs  sourcify.rs  well_known.rs
src/label/: mod.rs
src/output/: json.rs  mod.rs  tree.rs
src/printer/: html.rs  json.rs  mod.rs  tree.rs
src/printers/: html.rs  json.rs  mod.rs  text.rs
src/providers/: blockscout.rs  dune.rs  eightbyte.rs  etherscan.rs  manager.rs  mod.rs  rpc.rs  simulator.rs  sourcify.rs  well_known.rs
src/providers/factory/: chainlist.rs  mod.rs
src/trace/: blockscout.rs  dune.rs  event_position.rs  mod.rs  rpc.rs  simulate.rs
src/tree/: decode.rs  mod.rs
tests/: e2e.rs
(+106 files in other folders)
